--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.4.0",
     "async": "^3.2.0",
-    "discord.js": "^12.5.1",
+    "discord.js": "^12.5.3",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.2.8",
     "ffmpeg-stream": "^0.7.0",
@@ -25,6 +25,8 @@
     "request": "^2.88.2",
     "url": "^0.11.0",
     "xmlhttprequest": "^1.8.0",
-    "ytdl-core": "^4.8.2"
+    "ytdl-core": "^4.8.2",
+    "ytpl": "^2.2.1",
+    "ytsr": "^3.5.0"
   }
 }
