--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url": "^0.11.0",
     "xmlhttprequest": "^1.8.0",
     "ytdl-core": "^4.8.2",
+    "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1",
     "ytsr": "^3.5.0"
   }
