--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@discordjs/opus": "^0.4.0",
     "async": "^3.2.0",
+    "discord-player": "^4.1.0",
+    "discord-ytdl-core": "^5.0.3",
     "discord.js": "^12.5.3",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.2.8",
@@ -22,6 +24,7 @@
     "lzma-native": "^7.0.1",
     "node-fetch": "^2.6.1",
     "npm": "^7.6.3",
+    "prism-media": "^1.2.9",
     "request": "^2.88.2",
     "url": "^0.11.0",
     "xmlhttprequest": "^1.8.0",
