--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i": "^0.3.6",
     "lzma-native": "^7.0.1",
     "node-fetch": "^2.6.1",
+    "node-firebird": "^1.0.0",
     "npm": "^7.6.3",
     "prism-media": "^1.2.9",
     "request": "^2.88.2",
