--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^12.5.3",
     "node-firebird": "^1.0.0",
+    "node-schedule": "^2.1.0",
     "ytdl-core": "^4.9.1",
     "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
