--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.8.0",
     "async": "^3.2.2",
     "canvas": "^2.8.0",
+    "discord-api-types": "^0.31.1",
     "discord-ytdl-core": "^5.0.4",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.6.0",
     "ffmpeg-static": "^4.4.0",
     "got": "^11.8.2",
+    "libsodium-wrappers": "^0.7.10",
     "node-firebird": "^1.0.0",
     "node-schedule": "^2.1.0",
-    "ytdl-core": "^4.9.2",
+    "ytdl-core": "^4.11.0",
     "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
   }
